objects/Invoice_Reminder__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Invoice__r.Opportunity__r.Account_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BypassProcessBuilder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BypassProcessBuilder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_Date_Old_Org__c</fullName>
        <label>Created Date Old Org</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Clean__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Clean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Datum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <formula>LPAD(TEXT(DAY(Date__c+Payment_Term__c)),2,'0') &amp; '.' &amp; LPAD(TEXT(MONTH(Date__c+Payment_Term__c)),2,'0') &amp; '.' &amp; TEXT(YEAR(Date__c+Payment_Term__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fälligkeitsdatum</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Rechnung</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Mahnungen</relationshipLabel>
        <relationshipName>Invoice_Reminders</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MANRImpID__c</fullName>
        <externalId>true</externalId>
        <label>MANRImpID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Mahnung_ID__c</fullName>
        <label>Old Mahnung ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Invoice__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Zahlungsfrist</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Reminder_Stages</valueSetName>
        </valueSet>
    </fields>
    <label>Mahnung</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mahnungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Invoice__c</columns>
        <columns>Number__c</columns>
        <columns>Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Payment_Term__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Overdue_Invoice_Reminders</fullName>
        <columns>NAME</columns>
        <columns>Date__c</columns>
        <columns>Number__c</columns>
        <columns>Invoice__c</columns>
        <columns>Stage__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Due_Date__c</field>
            <operation>lessThan</operation>
            <value>Today</value>
        </filters>
        <label>Überfällige Mahnungen</label>
    </listViews>
    <listViews>
        <fullName>Unsend_Invoice_Reminders</fullName>
        <columns>NAME</columns>
        <columns>Invoice__c</columns>
        <columns>Date__c</columns>
        <columns>Number__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Stage__c</columns>
        <columns>Payment_Term__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft,Canceled</value>
        </filters>
        <label>Unversendete Mahnungen</label>
    </listViews>
</CustomObject>